# RoboticsTestAutomation

./: .gitignore  CLAUDE.md  HRTF_Design_Document_v1.0.md  HRTF_Requirements_v1.0.docx  NEXT_STEPS.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
fixtures/: simple_biped_crouched.yaml  simple_biped_standing.yaml  single_block_elevated.yaml
hrtf/adapters/: base.py
hrtf/assertions/: compound.py  engine.py  predicates.py
hrtf/baselines/: manager.py
hrtf/cli/: baseline.py  init.py  main.py  report.py  run.py  ui.py
hrtf/core/: exceptions.py  types.py
hrtf/execution/: orchestrator.py
hrtf/models/: loader.py
hrtf/reporting/: html_report.py
hrtf/scenario/: composer.py  parser.py
hrtf/signals/: logger.py
hrtf/ui/: app.py
models/: simple_biped.urdf  simple_biped.xml  single_link.urdf  single_link.xml
run_settings/: gazebo_default.yaml  mujoco_default.yaml  mujoco_high_fidelity.yaml
scenarios/: sc01_static_balance.yaml  sc02_lateral_push_recovery.yaml  sc03_flat_ground_gait.yaml  sc04_joint_torque_compliance.yaml  sc05_stair_ascent.yaml  sc06_fall_detection.yaml  sc07_payload_walking.yaml  sc08_slope_ascent.yaml  sc09_object_grasp.yaml  sc10_push_recovery_during_manipulation.yaml
test_cases/: tc01_static_balance.yaml  tc02_lateral_push_recovery.yaml  tc03_flat_ground_gait.yaml  tc04_joint_torque_compliance.yaml  tc05_stair_ascent.yaml  tc06_fall_detection.yaml  tc07_payload_walking.yaml  tc08_slope_ascent.yaml  tc09_object_grasp.yaml  tc10_push_recovery_during_manipulation.yaml
tests/: test_parser.py
tests/integration/: test_ui.py  (+1 more)
(+5 files in other folders)
